[package]
name = "mydtu"
version = "0.1.0"
authors = ["son"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.116", features = ["derive"] }
toml = "0.5.6"
clap = "2.33.3"
tokio = { version = "0.2.22", features = ["full"] }
futures = "0.3.6"
reqwest = { version = "0.10.8", features = ["json"] }
base64 = "0.13.0"
openssl = "0.10.32"